reverted the tailwind and fixed the footer alignment

--- a/elizawebsite/src/App.css
+++ b/elizawebsite/src/App.css
@@ -5,6 +5,7 @@
   font-style: italic;
   font-weight: bolder;
   width: 70%;
+  margin: 2rem 0 1rem 0;
 }
 
 .topbar{
@@ -17,19 +18,20 @@
   display: flex;
   flex-direction: row;
   
-}
+} 
 
-.contactbox{
+/* .contactbox{
   display: flex;
   align-items: center;
   margin: 0 2rem 0 5rem;
-}
+} */
 
 .mainbody{
   display: flex;
   flex-direction: row;
   margin-left: 5rem;
   padding-top: 1rem;
+  flex: 1;
   /* margin: 0; */
 }
 
@@ -55,11 +57,9 @@
   flex-direction: row;
 }
 
-
-
 .teamelizatext{
   font-style: italic;
-   text-align: center; 
+  text-align: center; 
 }
 
 .newsbox{
@@ -76,21 +76,17 @@
   margin-top: 2rem;
 }
 
-.contactinfo{
+.footer{
   border-top: #4a5568 solid 1.5px;
   padding: 1rem 0 1rem 2rem;
   margin: 3rem 0 0 0;
-  bottom: 0;
 	display: flex;
-  position: absolute;
+  position: fixed; 
+  bottom: 0;
   width: 100%;
 }
 
-.mailtext{
-  /* margin: 0 0 0 2rem ; top right botton left */
-  font-style: italic;
 
-}
 
 
 /****mobile compatible code**/
@@ -125,7 +121,7 @@
     text-align: center;
     width: 100%;
   }
-  .contactinfo{
+  .footer{
     bottom:auto;
   }
 
@@ -145,9 +141,17 @@
   }
   .teamelizatext{
      text-align: left; 
-     padding-left: 10vw;
+     
   }
-  .contactinfo{
-    bottom:auto;
+   /* .footer{
+    position: relative;
+    bottom: auto;
+    inset-inline: calc(var(--spacing) * 0);
+  }  */
+}
+
+@media screen and (max-height: 770px) {
+  .footer{
+    position: relative;
   }
 }
