--- a/elizawebsite/src/index.css
+++ b/elizawebsite/src/index.css
@@ -28,9 +28,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
- /* display: flex;*/
-  /*place-items: center;*/
+margin: 0;
+ display: flex;
+ flex-direction: column;
+   /*place-items: center;*/
   /* min-width: 320px;
   min-height: 100vh;*/
 } 
